<resources>
    <string name="app_name">Takasimura</string>
    <string name="app_tittle">Takasimura</string>
    <string name="subtitle">Your Financial Partner For\n Save Your Money</string>
    <string name="custom_button">Custom Button</string>
    <string name="start">Mulai Sekarang</string>
    <string name="icon_description">icon</string>
    <string name="Register">Daftar</string>
    <string name="Login">Masuk</string>
    <string name="onBoard_teks">Financial Track \n For Your Feature.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Masuk</string>
    <string name="Subtitle_login">Masukan email Dan Password</string>
    <string name="username">Username</string>
    <string name="username_hint">Username...</string>
    <string name="password">Password...</string>
    <string name="logTitle">Takasimura</string>
    <string name="password_label">Password</string>
    <string name="show_password">show_password</string>
    <string name="cancel">Cancel</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk_dengan_google">Masuk Dengan Google</string>
    <string name="email_hint">Example@gmail.com</string>
    <string name="email_label">Email</string>
    <string name="register_subtitle">Daftar Untuk Membuat Akun Anda</string>
    <string name="lupa_password_title">Lupa Password</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="back_icon">back_icon</string>
    <string name="password_baru">Password Baru</string>
    <string name="verifikasi_password">Verifikasi Password</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="password_berhasil_di_ubah">Password Berhasil Di ubah</string>
    <string name="masukan_pin">Masukan PIN</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="daftar">Daftar</string>
    <string name="user">User</string>
    <string name="b_down">icon</string>
    <string name="edit">edit</string>
    <string name="search">search</string>
    <string name="ic_wallet">wallet</string>
    <string name="dummy_data">Balance: Rp.150.000</string>
    <string name="Empty_list_title">Tidak Ada Catatan</string>
    <string name="subtitle_main_text">Ketuk Tombol + Untuk Menambah Catatan</string>
    <string name="baneer_main">baneer_main</string>
    <string name="add_button">add_button</string>
    <string name="transaksi">Transaksi</string>
    <string name="kalender">Kalender</string>
    <string name="dompet">Dompet</string>
    <string name="profile">Profile</string>
    <string name="makanan">Makanan</string>
    <string name="transportasi">Transportasi</string>
    <string name="hiburan">Hiburan</string>
    <string name="tagihan">Tagihan</string>
    <string name="kesahatan">Kesahatan</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="lainnya">Lainnya</string>
    <string name="digital_payment">digital Payment</string>
    <string name="cash">cash</string>
    <string name="penghargaan">Penghargaan</string>
    <string name="investasi">Investasi</string>
    <string name="gaji">Gaji</string>
    <string name="scan">Scan</string>
    <string name="rp_50_000">Rp 50.000</string>
    <string name="rp_100_000">Rp 100.000</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="icon_berhasil">Icon Berhasil</string>
    <string name="registrasi_berhasil">Registrasi Berhasil</string>
    <string name="pendaftaran_berhasil_dilakukan">Pendaftaran berhasil dilakukan!</string>
    <string name="ok">OK</string>
    <string name="rp_format">Rp %1$d</string>
    <string name="balance">Balance:</string>
    <string name="total_balance">0</string>
    <string name="digital_payments">digital payment</string>
    <string name="transaksi_income">Transaksi Income</string>
    <string name="expanse">Expanse</string>
    <string name="income">Income</string>
    <string name="aktivitas_berhasil">Aktivitas Berhasil</string>
    <string name="aktivitas_anda_berhasil_dilakukan">Aktivitas Anda Berhasil Dilakukan!</string>
    <string name="success_desc">success desc</string>

</resources>