<!-- res/layout/custom_dialog.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aktivitas_berhasil"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/Dark3"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/imageSuccess"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/success"
        android:layout_gravity="center"
        android:contentDescription="@string/success_desc"
    />


    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aktivitas_anda_berhasil_dilakukan"
        android:paddingTop="8dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/Main"
        android:text="@string/ok"
        android:textColor="@color/Dark3" />
</LinearLayout>
