<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.Login">

    <!-- Background -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient" />

    <!-- Gambar di Tengah Atas -->
    <ImageView
        android:id="@+id/onBoardImage"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:src="@drawable/log_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/takasimuraText"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="60dp" />

    <!-- Teks di Bawah Gambar -->
    <TextView
        android:id="@+id/takasimuraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/Dark2"
        app:layout_constraintTop_toBottomOf="@+id/onBoardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp" />

    <!-- Form Login -->
    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/form_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Title Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password_title"
            android:textColor="@color/Dark2"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/email_label"
            android:textColor="@color/Dark2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/email_hint"
            app:boxBackgroundMode="none">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardForgotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            android:layout_marginTop="20dp"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/Main"
            app:cardUseCompatPadding="false"
            android:layout_gravity="center"
            app:cardPreventCornerOverlap="true">

            <Button
                android:id="@+id/forgotButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/poppins_bold"
                android:padding="10dp"
                android:text="@string/selanjutnya"
                android:textColor="@color/Dark2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!-- Icon keluar di pojok kanan atas -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_icon"
        android:contentDescription="@string/back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>
