<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Activity.editProfile">
    <!-- Background -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_icon"
        android:contentDescription="@string/back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:focusable="true" />

    <!-- Form Login -->
    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginTop="16dp"
        android:padding="15dp"
        android:background="@drawable/form_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_edit_profiles" />

        <!-- Username -->
        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/edit_profile"
            android:textColor="@color/Dark3"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semibold" />


        <!-- username Input-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginStart="10dp"
            android:textColor="@color/Dark2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/username_hint"
            app:boxBackgroundMode="none">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="text"
                android:drawableEnd="@drawable/ic_username"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/email_label"
            android:textColor="@color/Dark2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/email_hint"
            app:boxBackgroundMode="none">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/verifikasi_password"
            android:textColor="@color/Dark2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:hint="@string/verifikasi_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:background="@drawable/edit_text_border"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/changePasswordCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            android:elevation="20dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/Main"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true">

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:visibility="gone"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large" />

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/poppins_bold"
                android:padding="10dp"
                android:text="@string/edit"
                android:textColor="@color/Dark2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
